# portfolio-qaoa-characterization

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  RESEARCH_JOURNAL.md  pyproject.toml
.github/workflows/: ci.yml
configs/: default_run.yaml  layerfield_spin.yaml  legacy_portfolio_default_run.yaml  legacy_portfolio_mixer_dominance_suite.yaml  legacy_portfolio_multi_regime_suite.yaml  mixer_dominance_suite.yaml  multi_regime_suite.yaml
docs/: ARCHITECTURE.md  SECURITY_NOTES.md  baseline_manifest.json  decision_map.md  related_work.md  student_research_journal.tex  when_bo_was_not_worth_it.md
monolith-full/: README.md  layerfield_qaoa_monolith.py  portfolio_qaoa_bench_monolith.py
notebooks/: main_results.ipynb
overleaf/portfolio_qaoa_thesis/: README.md  main.tex  references.bib
overleaf/student_research_journal/: README.md
results/live_ibm_open_2026_04_19/: live_run.json
results/mixer_dominance_pilot_v2/: mixer_dominance_pairs.csv  mixer_dominance_report.md  suite_aggregated.csv  (+7 more)
scripts/: audit_deps.sh  build_journal.sh  build_monolith_full.py  build_native.sh  build_results_at_a_glance.py  make_baseline_manifest.py  run_default.sh  run_suite.sh  sync_overleaf_journal.sh
tests/: test_cli_smoke.py  test_config.py  test_config_and_payload.py  test_data_and_qubo.py  test_landscape.py  test_monolith_sync.py  test_objective_math.py  test_optimizer_fallback.py  test_pipeline_and_suite.py  test_quantum_fixes.py  test_reporting_and_plotting.py  test_runtime_accounting.py  test_spin_physics.py  test_step5_logging_cleanup.py  test_step7_native_accel.py
(+135 files in other folders)
