[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "portfolio-qaoa-bench"
version = "0.4.0"
description = "Regime-aware QAOA benchmark suite for constrained portfolio selection"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "matplotlib>=3.8",
  "numpy>=1.26",
  "PyYAML>=6.0",
  "scikit-learn>=1.5",
  "scipy>=1.12",
]

[project.optional-dependencies]
bo = [
  "torch>=2.2",
  "botorch>=0.16",
  "gpytorch>=1.14",
]
quantum = [
  "qiskit>=2.3",
  "qiskit-aer>=0.17",
  "qiskit-ibm-runtime>=0.46",
]
dev = [
  "pytest>=8.0",
]

[project.scripts]
portfolio-qaoa-bench = "portfolio_qaoa_bench.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
